--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,8 @@
 .about__content {
   display: flex;
   justify-content: space-between;
-  padding: 80px 104px 0;
+  padding: 80px 0 0 104px;
+  margin-bottom:80px; 
   gap: 56px;
 }
 .about__image {
@@ -21,7 +22,7 @@
   font-size: 40px;
   line-height: 46px;
   margin: 0;
-  margin-bottom: 24px;
+  margin:52px 0  24px;
 }
 .about__description {
   max-width: 600px;
