--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
   background: url("../../assets/background.svg") no-repeat center center/cover;
-  width: 1440px;
+  max-width: 1440px;
+  width:100%; 
   height: 576px;
 }
