--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,8 +1,8 @@
 .about__content {
   display: flex;
   justify-content: space-between;
-  padding: 80px 0 0 104px;
-  margin-bottom:80px; 
+  padding: 80px 104px;
+  margin-bottom: 80px;
   gap: 56px;
 }
 .about__image {
@@ -21,18 +21,68 @@
   font-weight: 400;
   font-size: 40px;
   line-height: 46px;
-  margin: 0;
-  margin:52px 0  24px;
+  margin: 52px 0 24px;
 }
 .about__description {
   max-width: 600px;
-  height: 120px;
+  width: 100%;
   font-size: 18px;
-  line-height: 18px;
+  line-height: 24px;
+  font-weight: 400;
   color: #1a1b22;
   padding-right: 216px;
   margin: 0;
 }
 .about__app {
   margin: 0;
+}
+
+@media screen and (max-width: 992px) {
+  .about__content {
+    gap: 32px;
+    padding: 40px 40px 61px;
+    justify-content: center;
+    margin:0; 
+  
+  }
+  .about__image {
+    width: 232px;
+    height: 232px;
+  }
+  .about__author {
+    width: 400px;
+    font-size: 30px;
+    margin: -16px 0 16px 0;
+  }
+  .about__description {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+@media screen and (max-width: 768px) {
+  
+  
+}
+@media screen and (max-width:576px){ 
+  .about__content { 
+    flex-direction:column; 
+    justify-content: center;
+    align-items: center;
+  }
+  .about__text{ 
+text-align: center;
+  }
+  .about__author{ 
+    padding:0; 
+    margin:16px 0 24px; 
+  }
+  .about__description{ 
+    max-width:288px; 
+    width:100%; 
+    margin:0 auto; 
+  }
+  .about__image{ 
+    width:272px; 
+    height:272px; 
+  }
 }
