--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -22,7 +22,11 @@
 .footer__link {
   text-decoration: none;
   color: #1a1b22;
-
   font-size: 18px;
   line-height: 24px;
+}
+@media screen and (max-width:992px){ 
+  .footer { 
+    padding:24px 40px 18px ; 
+  }
 }
