--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,3 +4,22 @@
   width:100%; 
   height: 576px;
 }
+
+
+@media screen and (max-width: 992px){ 
+  .header{
+    max-width:992px;
+    width:100%; 
+    margin:0 auto; 
+    height:450px;
+  }
+}
+@media screen and (max-width: 768px){ 
+  .header{
+    max-width:768px;
+    width:100%; 
+    margin:0 auto; 
+    height:400px;
+  }
+}
+
