--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,12 +8,14 @@
   padding: 0 104px 0;
 }
 .navigation__logo {
+  width:200px; 
+  height:24px; 
   font-family: "Roboto Slab", sans-serif;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
   vertical-align: middle;
-  margin:0; 
+  margin: 0;
 }
 .navigation__menu {
   display: flex;
@@ -37,7 +39,7 @@
   height: 2px;
   width: 120%;
   background-color: #fff;
-  margin:0; 
+  margin: 0;
 }
 .navigation__signin {
   width: 176px;
@@ -46,4 +48,34 @@
   border-radius: 100px;
   color: white;
   background: transparent;
+}
+
+@media screen and (max-width: 992px) {
+  .navigation {
+    height: 66px;
+    padding: 0 40px 0;
+  }
+  .navigation__menu {
+    font-size: 16px;
+    gap: 16px;
+  }
+  .navigation__home {
+    width: 64px;
+    height: 24px;
+  }
+  .navigation__home::after {
+    top: 43px;
+    left: 0;
+    height: 2px;
+    width: 70%;
+  }
+  .navigation__signin {
+    width: 152px;
+    height: 40px;
+    border: 1px solid #fff;
+  }
+  .navigation__logo{ 
+    width:200px; 
+    height:24.8px; 
+  }
 }
