--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,19 +6,11 @@
 }
 
 
-@media screen and (max-width: 992px){ 
-  .header{
-    max-width:992px;
-    width:100%; 
-    margin:0 auto; 
-    height:450px;
-  }
-}
+
 @media screen and (max-width: 768px){ 
   .header{
     max-width:768px;
-    width:100%; 
-    margin:0 auto; 
+    /* margin:0 auto;  */
     height:400px;
   }
 }
