--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,6 +10,10 @@
   font-weight: 400;
   margin: 0;
 }
+.footer__social-container {
+  display: flex;
+}
+
 .footer__copyright {
   color: #b6bcbf;
   font-size: 16px;
@@ -25,8 +29,7 @@
   font-size: 18px;
   line-height: 24px;
 }
-@media screen and (max-width:992px){ 
-  .footer { 
-    padding:24px 40px 18px ; 
-  }
+
+@media screen and (max-width: 768px) {
+ 
 }
