--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -31,5 +31,26 @@
 }
 
 @media screen and (max-width: 768px) {
- 
+  .footer { 
+    padding:24px 40px 18px; 
+  }
+}
+@media screen and (max-width:700px){ 
+  .footer{ 
+    flex-direction: column-reverse;
+    padding:20px 16px; 
+  }
+  .footer__social-container{ 
+    justify-content: space-between;
+    margin-bottom:38px; 
+  }
+  .footer__social_type_nav{ 
+    flex-direction: column;
+    padding:0; 
+    
+  }
+  .footer__copyright{ 
+    /* padding:0 16px 22px;  */
+    font-size:16px; 
+  }
 }
