--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,17 +1,17 @@
 .header {
   background: url("../../assets/background.svg") no-repeat center center/cover;
   max-width: 1440px;
-  width:100%; 
+  width: 100%;
   height: 576px;
 }
 
-
-
-@media screen and (max-width: 768px){ 
-  .header{
-    max-width:768px;
-    /* margin:0 auto;  */
-    height:400px;
+@media screen and (max-width: 768px) {
+  .header {
+    height: 400px;
   }
 }
-
+@media screen and (max-width:700px){ 
+  .header{ 
+    height:536px; 
+  }
+}
