--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,10 +1,13 @@
 .news-card {
+  position: relative;
   background: #fff;
   border-radius: 16px;
+  padding-bottom: 24px;
 }
 .news-card__image {
   width: 400px;
   height: 272px;
+  object-fit: cover;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
@@ -25,7 +28,7 @@
   font-size: 26px;
   line-height: 30px;
   color: #1a1b22;
-  margin-bottom: 20px;
+  margin: 0 0 20px;
 }
 
 .news-card__description {
@@ -33,5 +36,46 @@
   font-size: 16px;
   line-height: 22px;
   color: #1a1b22;
-  margin-bottom: 18px;
+  margin: 0 0 18px;
+}
+.news-card__author {
+  position: absolute;
+  font-family: "Roboto Slab" sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #b6bcbf;
+  text-overflow: ellipsis;
+  margin: 0;
+}
+.news-card__bookmark-container {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+}
+.news-card__bookmark {
+  cursor: pointer;
+  background-image: url("../../assets/bookmarknormal.svg");
+    transition: all .9s ease-in-out; 
+
+}
+.new-card__bookmark:hover {
+  background-image: url("../../assets/bookmarkhover.svg");
+}
+
+.news-card__hover-message {
+  position: absolute;
+  top: 0px;
+  right: 50px;
+  font-size: 12px;
+  font-family: "Roboto", Georgia, serif;
+  font-weight: 500;
+  padding: 11px 20px;
+  border-radius:16px; 
+  vertical-align: center;
+  width: 170px;
+  background: rgba(255, 255, 255, 1);
+  transition: opacity 0.6s ease;
+  z-index: 10;
 }
