--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -37,6 +37,7 @@
   position: relative;
   margin: 0;
 }
+
 .navigation__link-home::after {
   position: absolute;
   content: "";
@@ -55,6 +56,43 @@
   color: white;
   background: transparent;
 }
+
+/* Navigation Logged in */
+.navigation-logged__menu {
+  display: flex;
+  align-items: center;
+  gap: 76px;
+}
+.navigation-logged__menu p {
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 500;
+}
+.navigation-logged__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 13px;
+  background: transparent;
+  border: 1px solid #d1d2d6;
+  padding: 8px 8px 8px 15px;
+  border-radius: 1000px;
+  font-weight: 500;
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  cursor: pointer;
+}
+.navigation-logged__color {
+  color: #1a1b22;
+}
+@media screen and (max-width: 700px) {
+  .navigation-logged__menu {
+    display: none;
+  }
+}
+
 
 @media screen and (max-width: 768px) {
   .navigation {
