--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -29,7 +29,6 @@
   max-width: 430px;
   width: 100%;
   padding: 34px 36px 28px;
-  border: 1px solid #000;
 }
 .modal__title {
   font-family: "Roboto", sans-serif;
@@ -124,4 +123,16 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
+}
+
+/* Modal Error */
+.modal__input_error {
+  border: 1px solid red;
+}
+
+.modal__error {
+  font-size: 12px;
+  color: red;
+  margin-top: 4px;
+  display: block;
 }
