--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -7,6 +7,9 @@
   border-bottom: 1px solid #ffffff33;
   padding: 0 104px 0;
 }
+.navigation_dark {
+  color: #000;
+}
 .navigation__mobile {
   display: none;
 }
@@ -19,6 +22,10 @@
   line-height: 24px;
   vertical-align: middle;
   margin: 0;
+  color: #fff;
+}
+.navigation__logo_dark {
+  color: #000;
 }
 .navigation__menu {
   display: flex;
@@ -31,14 +38,13 @@
   font-size: 18px;
   line-height: 24px;
   margin: 0;
-   text-decoration:none; 
-  color: white; 
+  text-decoration: none;
+  color: white;
 }
 
 .navigation__link-home {
   position: relative;
   margin: 0;
- 
 }
 
 .navigation__link-home::after {
