--- a/src/components/SaveArticles/SaveArticles.css
+++ b/src/components/SaveArticles/SaveArticles.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  padding: 0 104px;
+  /* padding: 0 104px; */
   color: white;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -25,7 +25,7 @@
   font-size: 16px;
   font-weight: 500;
   text-decoration: none;
-  color: #000; 
+  /* color: #000; */
   cursor: pointer;
   transition: opacity 0.2s;
 }
@@ -65,21 +65,27 @@
 }
 
 .saved-articles__heading {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
   font-size: 18px;
-  font-weight: 500;
-  text-transform: uppercase;
-  color: #888;
-  margin-bottom: 12px;
+  line-height: 24px;
+  color: #1a1b2280;
+  margin-bottom: 28px;
 }
 
 .saved-articles__header {
-  font-size: 28px;
-  font-weight: 700;
-  margin-bottom: 12px;
+  font-family: "Roboto Slab", Gerogia, serif;
+  font-size: 40px;
+  line-height: 46px;
+  font-weight: 400;
+  margin-bottom: 30px;
 }
 
 .saved-articles__name {
-  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
   color: #666;
   margin-bottom: 24px;
 }
@@ -99,7 +105,6 @@
   gap: 24px;
 }
 
-/* Responsive */
 @media screen and (max-width: 768px) {
   .navigation {
     padding: 0 20px;
