--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -6,7 +6,7 @@
 }
 .news-card__image {
   max-width: 400px;
-  width:100%; 
+  width: 100%;
   height: 272px;
   object-fit: cover;
   border-top-left-radius: 16px;
@@ -55,11 +55,15 @@
   top: 24px;
   right: 24px;
 }
+.bookmark-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 .news-card__bookmark {
   cursor: pointer;
   background-image: url("../../assets/bookmarknormal.svg");
-    transition: all .9s ease-in-out; 
-
+  transition: all 0.9s ease-in-out;
 }
 .new-card__bookmark:hover {
   background-image: url("../../assets/bookmarkhover.svg");
@@ -73,7 +77,7 @@
   font-family: "Roboto", Georgia, serif;
   font-weight: 500;
   padding: 11px 20px;
-  border-radius:16px; 
+  border-radius: 16px;
   vertical-align: center;
   width: 170px;
   background: rgba(255, 255, 255, 1);
