--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,8 +8,11 @@
   background: transparent;
   color: white;
 }
-.navigation__mobile {
+.navigation__mobile{
   display: none;
+}
+.navigation__close{ 
+  display:none; 
 }
 .navigation__logo {
   width: 200px;
@@ -105,6 +108,7 @@
   color: #000;
 }
 
+
 @media screen and (max-width: 768px) {
   .navigation {
     height: 66px;
@@ -140,4 +144,35 @@
   .navigation-logged__menu {
     display: none;
   }
+  /* Navigation for moble */
+.navigation__overlay {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  height: 230px;
+  background-color: rgba(26, 27, 34, 1);
+  color: white;
+  padding: 20px 20px;
+  box-sizing: border-box;
+  transition: right 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  z-index: 100;
+}
+
+.navigation__overlay_open {
+  right: 0;
+}
+
+.navigation__close {
+  display:block; 
+  align-self: flex-end;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
 }
