--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -136,3 +136,11 @@
   margin-top: 4px;
   display: block;
 }
+@media screen and (max-width:768px) { 
+  .modal{ 
+    top:100px; 
+  }
+  .modal__content{ 
+    height:100%; 
+  }
+}
