--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -8,11 +8,11 @@
   background: transparent;
   color: white;
 }
-.navigation__mobile{
+.navigation__mobile {
   display: none;
 }
-.navigation__close{ 
-  display:none; 
+.navigation__close {
+  display: none;
 }
 .navigation__logo {
   width: 200px;
@@ -108,33 +108,24 @@
   color: #000;
 }
 
-
 @media screen and (max-width: 768px) {
-  .navigation {
-    height: 66px;
-    padding: 0 40px;
-  }
-  .navigation__menu {
-    gap: 18px;
-  }
-  .navigation__link {
-    font-size: 16px;
-  }
-  .navigation__link-signin {
-    width: 152px;
-    height: 40px;
-  }
-}
-@media screen and (max-width: 700px) {
   .navigation {
     padding: 16px;
     height: 56px;
     box-sizing: border-box;
   }
   .navigation__menu {
-    display: none;
+    flex-direction: column;
     align-items: baseline;
     height: 24px;
+  }
+  .navigation__link-home::after {
+    display: none;
+  }
+  .navigation__link-signin {
+    width: 288px;
+    height: 70px;
+    
   }
   .navigation__mobile {
     display: block;
@@ -142,37 +133,39 @@
     border: none;
   }
   .navigation-logged__menu {
-    display: none;
+    flex-direction: column;
+    /* align-items: flex-start; */
+    gap: 30px;
   }
-  /* Navigation for moble */
-.navigation__overlay {
-  position: fixed;
-  top: 0;
-  right: -100%;
-  width: 100%;
-  height: 230px;
-  background-color: rgba(26, 27, 34, 1);
-  color: white;
-  padding: 20px 20px;
-  box-sizing: border-box;
-  transition: right 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  z-index: 100;
-}
+  /* Navigation for moble popup */
+  .navigation__overlay {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 230px;
+    background-color: rgba(26, 27, 34, 1);
+    color: white;
+    padding: 20px 20px;
+    box-sizing: border-box;
+    transition: right 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    z-index: 100;
+  }
 
-.navigation__overlay_open {
-  right: 0;
-}
+  .navigation__overlay_open {
+    right: 0;
+  }
 
-.navigation__close {
-  display:block; 
-  align-self: flex-end;
-  background: none;
-  border: none;
-  color: white;
-  font-size: 24px;
-  cursor: pointer;
-}
+  .navigation__close {
+    display: block;
+    align-self: flex-end;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 24px;
+    cursor: pointer;
+  }
 }
