--- a/src/components/NewsGrid/NewsGrid.css
+++ b/src/components/NewsGrid/NewsGrid.css
@@ -1,7 +1,6 @@
 .news-grid {
-  /* max-width: 1440px; */
   margin: 0 auto;
-  padding: 80px 104px;
+  padding: 80px 0;
   background: #f5f6f7;
 }
 
@@ -15,7 +14,8 @@
 
 .news-grid__container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, 400px);
+  justify-content: center;
   gap: 16px;
 }
 
@@ -35,8 +35,11 @@
   margin-top: 56px;
 }
 
-
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 925px) {
+  .news-grid__container {
+    grid-template-columns: repeat(auto-fit, 224px);
+    gap: 8px;
+  }
   .news-grid {
     padding: 16px;
   }
@@ -45,5 +48,13 @@
     line-height: 34px;
     padding: 32px 0 56px;
     margin: 0;
+  }
+  .news-grid__show-more {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 578px) {
+  .news-grid__container {
+    grid-template-columns: repeat(auto-fit, 288px);
   }
 }
