--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -5,7 +5,6 @@
   padding-bottom: 24px;
 }
 .news-card__image {
-  max-width: 400px;
   width: 100%;
   height: 272px;
   object-fit: cover;
@@ -63,6 +62,7 @@
   top: 10px;
   left: 24px;
   padding: 8px 22px;
+  margin:0; 
   font-size: 14px;
   font-family: "Roboto", Georgia, serif;
   font-weight: 500;
@@ -111,5 +111,20 @@
 
   .news-card__description {
     margin: 0 0 12px;
+  }
+  .news-card__bookmark-container {
+    top: 8px;
+    right: 8px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .news-card__bookmark-container {
+    top: 6px;
+    right: 6px;
+  }
+  .news-card__keyword {
+    top: 6px;
+    left: 6px;
+    padding:8px 20px; 
   }
 }
