--- a/src/components/NewsGrid/NewsGrid.css
+++ b/src/components/NewsGrid/NewsGrid.css
@@ -1,6 +1,6 @@
 .news-grid {
   margin: 0 auto;
-  padding: 80px 0;
+  padding: 80px 104px;
   background: #f5f6f7;
 }
 
@@ -10,6 +10,7 @@
   font-weight: 400;
   line-height: 46px;
   color: #1a1b22;
+  margin: 0 0 30px;
 }
 
 .news-grid__container {
@@ -35,13 +36,18 @@
   margin-top: 56px;
 }
 
+@media screen and (max-width: 1024px) {
+  .news-grid {
+    padding: 80px 9px;
+  }
+}
 @media screen and (max-width: 925px) {
+  .news-grid {
+    padding: 40px;
+  }
   .news-grid__container {
     grid-template-columns: repeat(auto-fit, 224px);
     gap: 8px;
-  }
-  .news-grid {
-    padding: 16px;
   }
   .news-grid__title {
     font-size: 30px;
@@ -53,7 +59,10 @@
     margin-bottom: 40px;
   }
 }
-@media screen and (max-width: 578px) {
+@media screen and (max-width: 576px) {
+  .news-grid {
+    padding: 32px 16px;
+  }
   .news-grid__container {
     grid-template-columns: repeat(auto-fit, 288px);
   }
