--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -29,6 +29,11 @@
   line-height: 30px;
   color: #1a1b22;
   margin: 0 0 20px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  overflow: hidden;
 }
 
 .news-card__description {
@@ -38,6 +43,11 @@
   line-height: 22px;
   color: #1a1b22;
   margin: 0 0 18px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  overflow: hidden;
 }
 .news-card__author {
   position: absolute;
@@ -52,17 +62,17 @@
 }
 .news-card__bookmark-container {
   position: absolute;
-  top: 24px;
-  right: 24px;
+  top: 10px;
+  right: 10px;
   background: transparent;
   border: none;
 }
 .news-card__keyword {
   position: absolute;
   top: 10px;
-  left: 24px;
+  left: 10px;
   padding: 8px 22px;
-  margin:0; 
+  margin: 0;
   font-size: 14px;
   font-family: "Roboto", Georgia, serif;
   font-weight: 500;
@@ -88,7 +98,6 @@
   font-size: 12px;
   font-family: "Roboto", Georgia, serif;
   font-weight: 500;
-  padding: 11px 10px;
   border-radius: 16px;
   vertical-align: center;
   width: 150px;
@@ -125,6 +134,5 @@
   .news-card__keyword {
     top: 6px;
     left: 6px;
-    padding:8px 20px; 
   }
 }
