--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
-  background: url("../../assets/background.svg") no-repeat center center/cover;
+  background: url("../../assets/background-image.png") no-repeat center
+    center/cover;
   max-width: 1440px;
   width: 100%;
   height: 576px;
@@ -10,8 +11,8 @@
     height: 400px;
   }
 }
-@media screen and (max-width:700px){ 
-  .header{ 
-    height:536px; 
+@media screen and (max-width: 700px) {
+  .header {
+    height: 536px;
   }
 }
